src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_description_mode_with_text.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Name ────────────────────────────────────────────────────────────────────────┐"
"│ My Snippet                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query (from current) ────────────────────────────────────────────────────────┐"
"│ .test | keys                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Description (optional) ──────────────────────────────────────────────────────┐"
"│A helpful description                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ [Enter] Save  [Tab] Switch  [Esc] Cancel                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
