src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_mode_narrow_terminal.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Name ────────────────────────────────┐"
"│Test                                  │"
"└──────────────────────────────────────┘"
"┌ Query (from current) ────────────────┐"
"│ .test                                │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"┌──────────────────────────────────────┐"
"│ [Enter] Save  [Esc] Cancel           │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
