src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_mode_with_name_typed.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Name ────────────────────────────────────────────────────────────────────────┐"
"│My Snippet                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query (from current) ────────────────────────────────────────────────────────┐"
"│ .test | keys                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ [Enter] Save  [Esc] Cancel                                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
