src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_name_mode_with_description_field_visible.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Name ────────────────────────────────────────────────────────────────────────┐"
"│My Snippet                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query (from current) ────────────────────────────────────────────────────────┐"
"│ .test | keys                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Description (optional) ──────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ [Enter/Tab] Next  [Esc] Cancel                                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
