src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_edit_description_mode_active_full_height.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"╭ Name ────────────────────────────────────────────────────────────────────────╮"
"│ My Snippet                                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query ───────────────────────────────────────────────────────────────────────╮"
"│ .test | keys                                                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Description (optional) ──────────────────────────────────────────────────────╮"
"│Existing description                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Enter Update • Tab Next • Shift+Tab Prev • Esc Cancel                        │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
