src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_edit_description_mode_small_height.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"╭ Edit Snippet - Description ──────────────────────────────────────────────────╮"
"│Existing description                                                          │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
